<resources>
    <string name="app_name">KaliDigitalEmployee</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="welcom">Welcom</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_services">Services</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="i_ve_already_had_an_account">I\'ve already had an account</string>
    <string name="birthday">Дата рождения</string>
    <string name="data_contract">Дата окончания контракта</string>
    <string name="number_of_passport">number of passport</string>
</resources>